--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5",
     "morgan": "~1.7.0",
+    "multer": "^1.2.0",
     "serve-favicon": "~2.3.0"
   }
 }
